Fix test